--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ a {
 }
 
 .header_logoLnk {
-  background-image: url("/assets/images/logo.png");
+  background-image: url("../images/logo.png");
   height: 70px;
   width: 100px;
   background-repeat: no-repeat;
