--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,7 +394,7 @@ p {
 /* footer section end */
 /* banner section */
 .banner {
-  background-image: url("../images/bannerHome.jpg");
+  background-image: url("../images/homepage-banner.jpg");
   height: 500px;
   width: 100%;
   background-repeat: no-repeat;
@@ -414,7 +414,7 @@ p {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 50%);
+  background: rgba(0, 0, 0, 75%);
 }
 
 .banner_content {
@@ -452,7 +452,7 @@ p {
   color: var(--white-color);
   font-size: 16px;
   font-weight: 400;
-  line-height: 120%;
+  line-height: 150%;
   margin-bottom: 1rem;
 }
 
@@ -481,7 +481,7 @@ p {
   align-items: end;
   border-radius: 4px;
   border: 10px solid var(--white-color);
-  padding: 4px;
+ 
 }
 
 .featured_cardContent {
@@ -496,7 +496,7 @@ p {
 }
 
 .featured_cardContent h4 {
-  color: white;
+  color: var(--white-color);
 }
 
 .featured_card::after {
@@ -514,14 +514,14 @@ p {
 }
 
 .featured_cardContent h4 {
-  color: white;
+  color: var(--white-color);
   font-size: 24px;
   line-height: 100%;
   margin-bottom: 12px;
 }
 
 .featured_cardContent p {
-  color: white;
+  color:var(--white-color);
   font-size: 16;
   line-height: 100%;
   margin-bottom: 2px;
@@ -566,8 +566,6 @@ p {
 .slick-dots li {
   /* border: 1px solid var(--success-color); */
   border-radius: 50%;
-
-
 }
 
 .slick-dots li button:before {
@@ -584,6 +582,9 @@ p {
 .slick-dots li.slick-active button:before {
   color: var(--success-color);
 }
+.testimonialSec  .slick-track {
+  display: flex;
+}
 
 .featured_btn {
   width: 180px;
@@ -599,7 +600,6 @@ p {
 .why_wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-wrap: wrap;
   gap: 1rem;
 }
@@ -836,8 +836,11 @@ p {
   background-color: var(--white-color);
   text-align: center;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  height: 100%;
 }
-
+.slick-slide{
+height: auto;
+}
 .testimonial_cardProfilSec {
   width: 4rem;
   height: 4rem;
